Adding new car text and final car to html

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -2,8 +2,9 @@
 .animation {
     height: 100vh;
     width: 100vw;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
+    position: relative;
+    // display: flex;
+    // flex-wrap: nowrap;
+    // justify-content: center;
+    // align-items: center;
 }
