Adding nav and banner for after animated sequence

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,10 +1,18 @@
-// Blue colours
-$blue-main: #1d2951;
-
-// Brown colours
-$brown-main: #8a7531;
+// Purple main
+$purple-main: #443052;
+$purple-dark: #33243D;
+$purple-light: #553d67;
 
 // Greys
 $body-text: #5D5D5D;
 $grey-light: #f2f2f2;
+
+// Breakpoints
+$xxs: 400px;
+$xs: 500px;
+$small: 600px;
+$med: 750px;
+$large: 960px;
+$xl: 1080px;
+$xxl: 1200px;;    
 
