--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,10 +1,157 @@
-// animated intro scene
-.animation {
+
+.cars-intro {
+    padding: 2rem;
     height: 100vh;
     width: 100vw;
-    position: relative;
-    // display: flex;
-    // flex-wrap: nowrap;
-    // justify-content: center;
-    // align-items: center;
+    overflow-x: hidden;
+    position: absolute;
+    opacity: 0;
+    z-index: 10;
+
+    &__holder {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 1rem
+    }
+
+    &__title {
+        text-align: center;
+        font-size: 2rem;
+        line-height: 1.2;
+        padding: 1.5rem 0;
+        color: $purple-dark;
+    }
+
+    &__btn {
+        color: $grey-light;
+        background-color: $purple-main;
+        padding: 1.5rem 2rem;
+        font-size: 1.3rem;
+        text-decoration: none;
+        transition: all 200ms ease-in;
+
+        &:hover, &:focus {
+            background-color: $purple-light;
+        }
+    }
+
+    &__cars {
+        padding: 1rem 0;
+    }
+}
+
+// Media queries
+
+//500px
+@media screen and (min-width: $xs) {
+    
+    .cars-intro {
+        position: relative;
+
+        &__title {
+            font-size: 2rem;
+            margin-bottom: 1.5rem;
+        }
+
+        &__cars {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            top: 15%;
+
+            .car {
+                width: 50%;
+            }
+
+            .car-one {
+                position: absolute;
+                z-index: 1;
+                top: 50%;
+                right: 42%;
+                transform: translate(-50% -50%);
+            }
+
+            .car-two {
+                position: absolute;
+                left: 48%;
+                top: 12%;
+                transform: translate(-50% -50%);
+            }
+        }
+
+    }
+}
+
+//600px
+@media screen and (min-width: $small) {
+    
+    .cars-intro {
+
+        &__title {
+            font-size: 2.4rem;
+            margin-bottom: 1.5rem;
+        }
+
+        &__btn {
+            font-size: 1.6rem;
+        }
+
+    }
+}
+
+//750px
+@media screen and (min-width: $med) {
+
+    .cars-intro {
+
+        &__cars {
+
+            .car-two {
+                top: -18%;
+            }
+        }
+
+    }
+}
+
+//960px
+@media screen and (min-width: $large) {
+
+    .cars-intro {
+
+        &__cars {
+            top: 0;
+            margin-top: 3rem;
+
+            .car-one {
+                top: 75%;
+            }
+
+        }
+
+    }
+
+}
+
+//1080px
+@media screen and (min-width: $xl) {
+
+    .cars-intro {
+
+        &__title {
+            font-size: 3rem;
+        }
+    }
+}
+
+//1200px
+@media screen and (min-width: $xxl) {
+    
+    .cars-intro {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
 }
