cleaning up files

--- a/assets/scss/svgs/_svgs.scss
+++ b/assets/scss/svgs/_svgs.scss
@@ -3,6 +3,10 @@
 ---------------------------*/
 .animation {
 
+    .hidden-title {
+        display: none;
+    }
+
     &__intro--text {
         position: absolute;
         left: 50%;
